Fix uses of deprecated constructor.